--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,47 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  cursor: url(../img/flyswatter.png) 30 30, auto;
+  font-family: "Gloria Hallelujah", cursive;
+}
+button {
+  outline: none;
+  border: none;
+}
+button:active {
+  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+}
+.sound,
+.muted {
+  position: absolute;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  font-size: 50px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  z-index: 100;
+}
+.sound {
+  display: block;
+}
+.muted {
+  display: none;
+}
+
 section {
   width: 85%;
+  min-width: 640px;
   margin: auto;
   position: relative;
   display: flex;
   justify-content: center;
 }
-@media screen and (max-width: 450px) {
-  section {
-    width: 99%;
-  }
-}
+
 /* .clear {
   display: none;
 } */
@@ -21,30 +53,50 @@ section {
 .start__button,
 .restart__button,
 .clear__message,
+.tutorial,
 .time,
 .count {
   position: absolute;
+}
+.tutorial {
+  font-size: 1.8rem;
+  top: 53%;
+}
+@media screen and (max-width: 780px) {
+  .tutorial {
+    font-size: 1.2rem;
+  }
+}
+.move {
+  animation: move 500ms ease-in forwards;
+}
+@keyframes move {
+  from {
+    top: 53%;
+    left: 30%;
+  }
+  to {
+    top: 3%;
+    left: 3%;
+  }
 }
 
 .start__button {
   z-index: 11;
   display: block;
-  top: 45%;
+  top: 68%;
   width: 100px;
   height: 70px;
-  cursor: pointer;
 }
 .restart__button {
   z-index: 12;
-
   display: none;
-  top: 45%;
+  top: 68%;
   width: 100px;
   height: 70px;
-  cursor: pointer;
 }
 .clear__message {
-  top: 30%;
+  top: 50%;
   color: rgb(43, 64, 226);
   font-size: 2rem;
   font-weight: bold;
@@ -59,7 +111,7 @@ section {
   font-weight: bold;
 }
 .target__container {
-  opacity: 0;
+  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -70,6 +122,11 @@ section {
 }
 .mosquito {
   position: absolute;
-  width: 5%;
+  width: 4%;
   z-index: 10;
+}
+.effect {
+  position: absolute;
+  width: 70px;
+  z-index: 20;
 }
