--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ button {
   cursor: pointer;
 }
 body {
-  cursor: url(../img/flyswatter.png) 30 30, auto;
+  cursor: pointer;
   font-family: "Gloria Hallelujah", cursive;
   color: rgb(34, 34, 34);
   display: flex;
@@ -29,7 +29,7 @@ body {
   margin: auto;
   display: flex;
   flex-direction: column;
-  background: url(../img/background.png) no-repeat;
+  background: url(../img/forest.png) no-repeat;
   background-size: cover;
 }
 .game__header {
@@ -100,48 +100,43 @@ body {
 /* game */
 /* game field */
 
-#mosquito {
+#dollar {
   position: relative;
   width: 50px;
   animation: popping 800ms ease-in infinite;
   top: 0;
+  transform: translateY(20%);
 }
 @keyframes popping {
   0% {
     top: 0;
   }
   50% {
-    top: -15px;
+    top: -13px;
   }
   100% {
     top: 0;
   }
 }
-@media screen and (max-width: 780px) {
-  .popup__tutorial {
-    font-size: 1.2rem;
-  }
-}
-
 .game__target-container {
   width: 100%;
   height: 100%;
 }
-.mosquito:hover {
+.dollar:hover {
   transform: scale(1.2);
 }
-.mosquito {
+.dollar {
   transition: transform 150ms;
 }
-.watermelon {
+.pigeon {
   position: absolute;
-  width: 12%;
-  z-index: 9;
-}
-.mosquito {
-  position: absolute;
-  width: 6%;
+  width: 11%;
   z-index: 10;
+}
+.dollar {
+  position: absolute;
+  width: 9%;
+  z-index: 9;
 }
 .effect {
   position: absolute;
@@ -151,6 +146,10 @@ body {
 /* popup */
 .popup__tutorial {
   font-size: 1.8rem;
+  background: rgba(255, 255, 255, 0.6);
+  top: -26px;
+  padding: 5px 30px;
+  border-radius: 15px;
 }
 .move {
   animation: move 500ms ease-in forwards;
@@ -161,8 +160,7 @@ body {
     left: 30%;
   }
   to {
-    top: -100%;
-
+    top: -99%;
     left: 3%;
   }
 }
@@ -198,4 +196,21 @@ body {
   color: rgb(43, 64, 226);
   font-size: 2rem;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1000px) {
+  .game {
+    width: 800px;
+  }
+  .popup__tutorial {
+    font-size: 1.2rem;
+  }
+}
+@keyframes fly {
+  from {
+    transform: translate(0, 0);
+  }
+  to {
+    transform: translate(20%, -50%) scale(1.2);
+  }
 }
