--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ body {
   height: 50px;
   margin-top: 140px;
   font-size: 38px;
+  color: rgb(255, 255, 255);
   border: none;
   outline: none;
   background-color: transparent;
